add onscreen keyboard

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Luigi's Wordle</h1>
   <h2 id="message">Let's get started!</h2>
   <div id="board-container">
-    <section id="guess-board">
+    <div id="guess-board">
       <div id="guess-row-container">
         <div id="guess-row"></div>
         <div id="guess-row"></div>
@@ -57,8 +57,43 @@
         <div id="guess-row"></div>
         <div id="guess-row"></div>
       </div>
-    </section>
+    </div>
   </div>
-    
+  <div id="key-board-container">
+    <div id="key-board-rows">
+      <button class="btn btn-secondary" id="keys">Q</button>
+      <button class="btn btn-secondary" id="keys">W</button>
+      <button class="btn btn-secondary" id="keys">E</button>
+      <button class="btn btn-secondary" id="keys">R</button>
+      <button class="btn btn-secondary" id="keys">T</button>
+      <button class="btn btn-secondary" id="keys">Y</button>
+      <button class="btn btn-secondary" id="keys">U</button>
+      <button class="btn btn-secondary" id="keys">I</button>
+      <button class="btn btn-secondary" id="keys">O</button>
+      <button class="btn btn-secondary" id="keys">P</button>
+    </div>
+    <div id="key-board-rows">
+      <button class="btn btn-secondary" id="keys">A</button>
+      <button class="btn btn-secondary" id="keys">S</button>
+      <button class="btn btn-secondary" id="keys">D</button>
+      <button class="btn btn-secondary" id="keys">F</button>
+      <button class="btn btn-secondary" id="keys">G</button>
+      <button class="btn btn-secondary" id="keys">H</button>
+      <button class="btn btn-secondary" id="keys">J</button>
+      <button class="btn btn-secondary" id="keys">K</button>
+      <button class="btn btn-secondary" id="keys">L</button>
+    </div>
+    <div id="key-board-rows">
+      <button class="btn btn-secondary" id="keys">ENTER</button>
+      <button class="btn btn-secondary" id="keys">S</button>
+      <button class="btn btn-secondary" id="keys">D</button>
+      <button class="btn btn-secondary" id="keys">F</button>
+      <button class="btn btn-secondary" id="keys">G</button>
+      <button class="btn btn-secondary" id="keys">H</button>
+      <button class="btn btn-secondary" id="keys">J</button>
+      <button class="btn btn-secondary" id="keys">K</button>
+      <button class="btn btn-secondary" id="keys">DELETE</button>
+    </div>
+  </div>
 </body>
 </html>
