--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div id="key-board-container">
-    <div id="key-board-rows">
+    <div id="keyboard-rows">
       <button class="btn btn-secondary" id="keys">Q</button>
       <button class="btn btn-secondary" id="keys">W</button>
       <button class="btn btn-secondary" id="keys">E</button>
@@ -72,7 +72,7 @@
       <button class="btn btn-secondary" id="keys">O</button>
       <button class="btn btn-secondary" id="keys">P</button>
     </div>
-    <div id="key-board-rows">
+    <div id="keyboard-rows">
       <button class="btn btn-secondary" id="keys">A</button>
       <button class="btn btn-secondary" id="keys">S</button>
       <button class="btn btn-secondary" id="keys">D</button>
@@ -83,7 +83,7 @@
       <button class="btn btn-secondary" id="keys">K</button>
       <button class="btn btn-secondary" id="keys">L</button>
     </div>
-    <div id="key-board-rows">
+    <div id="keyboard-rows">
       <button class="btn btn-secondary" id="keys">ENTER</button>
       <button class="btn btn-secondary" id="keys">S</button>
       <button class="btn btn-secondary" id="keys">D</button>
