--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="./css/style.css">
   <script defer src="./js/app.js"></script>
+  <script defer src="./js/confetti.js"></script>
   <title>Luigi's Wordle</title>
 </head>
 <body>
+  <button id="light-dark-mode" class="btn">Light Mode</button>
   <h1>Luigi's Wordle</h1>
   <h2 id="message">Let's get started!</h2>
   <div id="board-container">
@@ -85,7 +87,7 @@
       <button class="btn btn-secondary" id="keys">L</button>
     </div>
     <div id="keyboard-rows">
-      <button class="btn btn-secondary" id="keys">ENTER</button>
+      <button class="btn btn-secondary" id="enter-btn">ENTER</button>
       <button class="btn btn-secondary" id="keys">S</button>
       <button class="btn btn-secondary" id="keys">D</button>
       <button class="btn btn-secondary" id="keys">F</button>
@@ -93,7 +95,7 @@
       <button class="btn btn-secondary" id="keys">H</button>
       <button class="btn btn-secondary" id="keys">J</button>
       <button class="btn btn-secondary" id="keys">K</button>
-      <button class="btn btn-secondary" id="keys">DELETE</button>
+      <button class="btn btn-secondary" id="delete-btn">DELETE</button>
     </div>
   </div>
 </body>
