--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script defer src="./js/confetti.js"></script>
   <title>Luigi's Wordle</title>
 </head>
-<body>
+<body class="dark">
   <button id="light-dark-mode" class="btn">Light Mode</button>
   <h1>Luigi's Wordle</h1>
   <h2 id="message">Let's get started!</h2>
