add reset button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Luigi's Wordle</title>
 </head>
 <body class="dark">
-  <button id="light-dark-mode" class="btn">Light Mode</button>
+  <button id="light-dark-mode" class="btn btn-dark">Light Mode</button>
   <h1>Luigi's Wordle</h1>
   <h2 id="message">Let's get started!</h2>
   <div id="board-container">
@@ -98,5 +98,6 @@
       <button class="btn btn-secondary" id="delete-btn">DELETE</button>
     </div>
   </div>
+  <button class="btn btn-danger" type="reset">RESET</button>
 </body>
 </html>
