fix keyboard ids

--- a/index.html
+++ b/index.html
@@ -64,37 +64,37 @@
   </div>
   <div id="key-board-container">
     <div id="keyboard-rows">
-      <button class="btn btn-secondary" id="keys">Q</button>
-      <button class="btn btn-secondary" id="keys">W</button>
-      <button class="btn btn-secondary" id="keys">E</button>
-      <button class="btn btn-secondary" id="keys">R</button>
-      <button class="btn btn-secondary" id="keys">T</button>
-      <button class="btn btn-secondary" id="keys">Y</button>
-      <button class="btn btn-secondary" id="keys">U</button>
-      <button class="btn btn-secondary" id="keys">I</button>
-      <button class="btn btn-secondary" id="keys">O</button>
-      <button class="btn btn-secondary" id="keys">P</button>
+      <button class="btn btn-secondary" id="q">Q</button>
+      <button class="btn btn-secondary" id="w">W</button>
+      <button class="btn btn-secondary" id="e">E</button>
+      <button class="btn btn-secondary" id="r">R</button>
+      <button class="btn btn-secondary" id="t">T</button>
+      <button class="btn btn-secondary" id="y">Y</button>
+      <button class="btn btn-secondary" id="u">U</button>
+      <button class="btn btn-secondary" id="i">I</button>
+      <button class="btn btn-secondary" id="o">O</button>
+      <button class="btn btn-secondary" id="p">P</button>
     </div>
     <div id="keyboard-rows">
-      <button class="btn btn-secondary" id="keys">A</button>
-      <button class="btn btn-secondary" id="keys">S</button>
-      <button class="btn btn-secondary" id="keys">D</button>
-      <button class="btn btn-secondary" id="keys">F</button>
-      <button class="btn btn-secondary" id="keys">G</button>
-      <button class="btn btn-secondary" id="keys">H</button>
-      <button class="btn btn-secondary" id="keys">J</button>
-      <button class="btn btn-secondary" id="keys">K</button>
-      <button class="btn btn-secondary" id="keys">L</button>
+      <button class="btn btn-secondary" id="a">A</button>
+      <button class="btn btn-secondary" id="s">S</button>
+      <button class="btn btn-secondary" id="d">D</button>
+      <button class="btn btn-secondary" id="f">F</button>
+      <button class="btn btn-secondary" id="g">G</button>
+      <button class="btn btn-secondary" id="h">H</button>
+      <button class="btn btn-secondary" id="j">J</button>
+      <button class="btn btn-secondary" id="k">K</button>
+      <button class="btn btn-secondary" id="l">L</button>
     </div>
     <div id="keyboard-rows">
       <button class="btn btn-secondary" id="enter-btn">ENTER</button>
-      <button class="btn btn-secondary" id="keys">S</button>
-      <button class="btn btn-secondary" id="keys">D</button>
-      <button class="btn btn-secondary" id="keys">F</button>
-      <button class="btn btn-secondary" id="keys">G</button>
-      <button class="btn btn-secondary" id="keys">H</button>
-      <button class="btn btn-secondary" id="keys">J</button>
-      <button class="btn btn-secondary" id="keys">K</button>
+      <button class="btn btn-secondary" id="z">Z</button>
+      <button class="btn btn-secondary" id="x">X</button>
+      <button class="btn btn-secondary" id="c">C</button>
+      <button class="btn btn-secondary" id="v">V</button>
+      <button class="btn btn-secondary" id="b">B</button>
+      <button class="btn btn-secondary" id="n">N</button>
+      <button class="btn btn-secondary" id="m">M</button>
       <button class="btn btn-secondary" id="delete-btn">DELETE</button>
     </div>
   </div>
