--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="./css/style.css">
-  <script defer src="./js/app.js"></script>
+  <script defer type="module" src="./js/app.js"></script>
+  <script defer type="module" src="./js/wordList.js"></script>
   <script defer src="./js/confetti.js"></script>
   <title>Luigi's Wordle</title>
 </head>
@@ -98,6 +99,6 @@
       <button class="btn btn-secondary" id="delete-btn">DELETE</button>
     </div>
   </div>
-  <button class="btn btn-danger" type="reset">RESET</button>
+  <button class="btn btn-danger" id='resetButton' type="reset">RESET</button>
 </body>
 </html>
