add isLetter check

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <button class="btn btn-secondary" id="l">L</button>
     </div>
     <div id="keyboard-rows">
-      <button class="btn btn-secondary" id="enter-btn">ENTER</button>
+      <button class="btn btn-secondary" id="enter">ENTER</button>
       <button class="btn btn-secondary" id="z">Z</button>
       <button class="btn btn-secondary" id="x">X</button>
       <button class="btn btn-secondary" id="c">C</button>
@@ -96,7 +96,7 @@
       <button class="btn btn-secondary" id="b">B</button>
       <button class="btn btn-secondary" id="n">N</button>
       <button class="btn btn-secondary" id="m">M</button>
-      <button class="btn btn-secondary" id="delete-btn">DELETE</button>
+      <button class="btn btn-secondary" id="delete">DELETE</button>
     </div>
   </div>
   <button class="btn btn-danger" id='resetButton' type="reset">RESET</button>
