--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Luigi's Wordle</title>
 </head>
 <body class="dark">
-  <button id="light-dark-mode" class="btn btn-dark">Light Mode</button>
+  <!-- <button id="light-dark-mode" class="btn btn-dark">Light Mode</button> -->
   <h1>Luigi's Wordle</h1>
   <h2 id="message">Let's get started!</h2>
   <div id="board-container">
