--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <script defer type="module" src="./js/app.js"></script>
   <script defer type="module" src="./js/wordList.js"></script>
   <script defer src="./js/confetti.js"></script>
+  <link 
+  id="favicon" 
+  rel="icon"
+  href="./assets/wordle.png"
+  type="image/png" 
+  sizes="32x32"
+>
   <title>Luigi's Wordle</title>
 </head>
 <body class="dark">
