--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="dark">
   <!-- <button id="light-dark-mode" class="btn btn-dark">Light Mode</button> -->
   <h1>Luigi's Wordle</h1>
-  <h2 id="message">Let's get started!</h2>
+  <h2 id="message"></h2>
   <div id="board-container">
     <div id="guess-board">
       <div id="guess-row-container">
