--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   type="image/png" 
   sizes="32x32"
 >
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luigi's Wordle</title>
 </head>
 <body class="dark">
