--- a/index.html
+++ b/index.html
@@ -107,6 +107,6 @@
       <button class="btn btn-danger" id="delete">DELETE</button>
     </div>
   </div>
-  <button class="btn btn-danger" id='resetButton' type="reset">RESET</button>
+  <button class="btn btn-primary" id='resetButton' type="reset">RESET</button>
 </body>
 </html>
